5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1573_1332.log
== TEST (2019-03-11 15:24:44) 
-- CODE:
aresta =3//2*(3*5**2)**0.5
area = 5
 
print(round(5, 4))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:24:57) 
-- CODE:
aresta =3/2*(3*5**2)**0.5
area = 5
 
print(round(5, 4))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:25:28) 
-- CODE:
print=(3/2*(3*5**2)**0.5()
area = 5
 
print(round(5, 4))
-- ERROR:
File "XXXX", line 2
    area = 5
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:26:18) 
-- CODE:
print =(3/2*(3*5**2)**0.5)
print =(5)
 
print(round(5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(5, 4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:27:33) 
-- CODE:
aresta =(3/2*(3*5**2)**0.5)
area =(5)
 
print(round(5, 4))
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:13) 
-- CODE:
print(aresta(3/2*(3*5**2)**0.5))
area =(5)
 
print(round(5, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(aresta(3/2*(3*5**2)**0.5))
NameError: name 'aresta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:29) 
-- CODE:
print(3/2*(3*5**2)**0.5)
area =(5)
 
print(round(5, 4))
-- OUTPUT:
12.99038105676658
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:29:47) 
-- CODE:
print(3/2*(3*5**2)**0.5)
print(5)
 
print(round(5, 4))
-- OUTPUT:
12.99038105676658
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:57) 
-- CODE:
print(round(3/2*(3*5**2)**0.5),4)
print(5)
 
print(round(5, 4))
-- OUTPUT:
13 4
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:12) 
-- CODE:
print(round(3/2*(3*5**2)**0.5,4))
print(5)
 
print(round(5, 4))
-- OUTPUT:
12.9904
5
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:17) 
-- CODE:
print(round(3/2*(3*5**2)**0.5,4))
print(5)
 
print(round(5, 4))
-- EXECUTION TIME:
0.190992
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
5
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:28) 
-- CODE:
print(round(3/2*(3*5**2)**0.5,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:30) 
-- CODE:
print(round(3/2*(3*5**2)**0.5,4))

-- EXECUTION TIME:
0.161643
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:31:56) 
-- CODE:

print(round(3/2*(3*5**2)**0.5,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:22) 
-- CODE:
print(round((3/2)*(3*5**2)**0.5,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:41) 
-- CODE:
print(round((3/2)*((3*5**2)**0.5,4))

-- ERROR:
File "XXXX", line 2
    
                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:08) 
-- CODE:
print(round((3/2)*((3*5**2)**0.5,4)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3/2)*((3*5**2)**0.5,4)))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:36:56) 
-- CODE:
print(round((3/2)*((3*5**2)**0.5,4)))
print(round((3/2)*((3*5**2)**0.5),4))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3/2)*((3*5**2)**0.5,4)))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:37:09) 
-- CODE:

print(round((3/2)*((3*5**2)**0.5),4))



-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:37:14) 
-- CODE:

print(round((3/2)*((3*5**2)**0.5),4))



-- EXECUTION TIME:
0.279253
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:04) 
-- CODE:
aresta = 5
area = 3/2*((3)**0.5)*aresta**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:42:08) 
-- CODE:
aresta = 5
area = 3/2*((3)**0.5)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.107641
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
